# gcm_analyzer

./: .gitignore  Pipfile  README  README.md  main.py  setup.cfg
gcm_analyzer/: cli.py  main.py
gcm_analyzer/gcm_error/: gcm_error.py
gcm_analyzer/gcm_no_error_repo/: gcm_no_error_repo.py
gcm_analyzer/gcm_out/: gcm_csv.py  gcm_out.py  gcm_quartile.py
gcm_analyzer/repo_metrics/cloc_analyzer/: cloc_analyzer.py
gcm_analyzer/repo_metrics/github_api_analyzer/: issue_analyzer.py  label_analyzer.py
