[metadata]
name = gcm_analyzer
version = "0.0.0"

author = LakeRainSound
author_email = restartsugar@gmail.com
description = gcm_setup
url = https://github.com/LakeRainSound/gcm_analyzer
# ライセンスファイルへのパスを指定
license_file = LICENSE

[options]
# Pythonバージョンの制約
pythonrequire = >=3.7
# 含めるパッケージの選択．この場合は自動で探索
packages = find:

# 依存関係の列挙
# install_requires =


[options.packages.find]
# 自動探索から外すものを列挙
exclude = .gitignore

[options.entry_points]
console_scripts =
    # コマンド名 = モジュールまでのパス:関数名
    gcm_analyze = gcm_analyzer.main:main